# df-merge

./: README.md  pyproject.toml
configs/: t5-multi-task.yaml  t5-single-task.yaml
src/: df-merge.py  finetune.py  inference.py
src/data/: dataset_readers.py
src/eval/: evaluator.py
src/model/: utils.py  vector.py
src/utils/: logger.py
